Only change bootstrap 4

--- a/src/Symfony/Bridge/Twig/Resources/views/Form/form_table_layout.html.twig
+++ b/src/Symfony/Bridge/Twig/Resources/views/Form/form_table_layout.html.twig
@@ -6,6 +6,7 @@
             {{- form_label(form) -}}
         </td>
         <td>
+            {{- form_errors(form) -}}
             {{- form_widget(form) -}}
         </td>
     </tr>
