--- a/src/Symfony/Bridge/Twig/Resources/views/Form/bootstrap_3_layout.html.twig
+++ b/src/Symfony/Bridge/Twig/Resources/views/Form/bootstrap_3_layout.html.twig
@@ -92,6 +92,7 @@
     <div class="form-group{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}">
         {{- form_label(form) -}}
         {{- form_widget(form) -}}
+        {{- form_errors(form) -}}
     </div>
 {%- endblock form_row %}
 
@@ -124,12 +125,14 @@
 {% block checkbox_row -%}
     <div class="form-group{% if not valid %} has-error{% endif %}">
         {{- form_widget(form) -}}
+        {{- form_errors(form) -}}
     </div>
 {%- endblock checkbox_row %}
 
 {% block radio_row -%}
     <div class="form-group{% if not valid %} has-error{% endif %}">
         {{- form_widget(form) -}}
+        {{- form_errors(form) -}}
     </div>
 {%- endblock radio_row %}
 
