--- a/src/Symfony/Bridge/Twig/Resources/views/Form/bootstrap_base_layout.html.twig
+++ b/src/Symfony/Bridge/Twig/Resources/views/Form/bootstrap_base_layout.html.twig
@@ -81,6 +81,7 @@
     {%- else -%}
         {%- set attr = attr|merge({class: (attr.class|default('') ~ ' form-inline')|trim}) -%}
         <div {{ block('widget_container_attributes') }}>
+            {{- form_errors(form) -}}
             <div class="table-responsive">
                 <table class="table {{ table_class|default('table-bordered table-condensed table-striped') }}">
                     <thead>
