Add a template fot div_layout

--- a/src/Symfony/Bridge/Twig/Resources/views/Form/form_div_layout.html.twig
+++ b/src/Symfony/Bridge/Twig/Resources/views/Form/form_div_layout.html.twig
@@ -283,6 +283,14 @@
 
 {%- block button_label -%}{%- endblock -%}
 
+{# Help #}
+
+{% block form_help -%}
+    {% if form.vars.help is not empty %}
+        <p class="form-help">{{ form.vars.help|raw }}</p>
+    {% endif %}
+{%- endblock form_help %}
+
 {# Rows #}
 
 {%- block repeated_row -%}
@@ -298,6 +306,7 @@
         {{- form_label(form) -}}
         {{- form_errors(form) -}}
         {{- form_widget(form) -}}
+        {{- form_help(form) -}}
     </div>
 {%- endblock form_row -%}
 
