--- a/src/Symfony/Bridge/Twig/Resources/views/Form/bootstrap_4_layout.html.twig
+++ b/src/Symfony/Bridge/Twig/Resources/views/Form/bootstrap_4_layout.html.twig
@@ -240,6 +240,6 @@
 
 {% block form_help -%}
     {% if help is not empty %}
-        <small class="form-text text-muted">{{ help }}</small>
+        <small class="form-text text-muted">{{ help|trans }}</small>
     {% endif %}
 {%- endblock form_help %}
